stuck here, help fix

--- a/style.css
+++ b/style.css
@@ -57,9 +57,8 @@ header{
     padding: 30px;
     display: flex;
     background-color: #E2EBEB;
-    line-height: normal;
-    font-style: normal;
-    justify-content: space-around;
+    position: relative;
+    left: 77px;
 }
 .box text{
     flex-direction: column;
@@ -69,7 +68,7 @@ header{
     justify-content:  center;
 }
 .box h3{
-    width: 486px;
+    width: fit-content;
     height: 76px;
     flex-shrink: 0;
     color: #404040;
@@ -77,7 +76,7 @@ header{
     font-weight: 500;
 }
 .box p{
-    width: 416px;
+    width: fit-content;
     height: 52px;
     flex-shrink: 0;
     color: #616161;
@@ -86,10 +85,11 @@ header{
 }
 .btn-blue{
     width: fit-content;
+    height: 77px;
     padding: 10px 20px;
     background-color: var(--primary-blue);
     color: var(--primary-white);
-    border-radius: 30px;
+    border-radius: 100px;
     font-size: 0.8em;
     cursor: pointer;
 }
